# immigration-case-os

./: .env.example  .gitignore  README.md  SETUP.md  compose.yaml  docker-compose.prod.yml  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json  vercel.json
.claude/: launch.json
.github/workflows/: ci.yml
apps/api/: package.json  tsconfig.json
apps/api/src/: app.module.ts  health.controller.ts  main.ts
apps/api/src/common/: auth.guard.ts  context.decorator.ts  exception.filter.ts  public.decorator.ts  tenant.interceptor.ts
apps/api/src/modules/tenants/: tenants.controller.ts  tenants.service.ts
apps/api/src/modules/users/: users.controller.ts  users.service.ts
apps/api/src/webhooks/: clerk.controller.ts  webhooks.module.ts
apps/web/: .gitignore  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json  vercel.json
apps/web/src/: middleware.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/dashboard/: layout.tsx  page.tsx
apps/web/src/app/intake/: page.tsx
apps/web/src/app/portal/: page.tsx
apps/web/src/lib/: clerk-config.ts
backend/: go.mod  go.sum
backend/cmd/gateway/: main.go
backend/internal/db/: postgres.go
backend/internal/models/: case.go  tenant.go
backend/internal/tenant/: context.go
docs/: PRODUCTION-ARCHITECTURE-PLAN.md  architecture.md  build-plan.md  counselai-inventory.md  data-model.md  decisions.md  sequence-diagrams.md
ml-service/ml/: README.md  pyproject.toml
scripts/ops/: cross-tenant-test.ts
scripts/seed/: seed.ts
services/ml/src/: main.py
(+21 files in other folders)
